chore: fix edit gap style

--- a/packages/varlet-ui/src/color-picker/components/color-picker-edit/color-picker-edit.less
+++ b/packages/varlet-ui/src/color-picker/components/color-picker-edit/color-picker-edit.less
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   display: flex;
-  gap: 10px;
+  gap: 5px;
   &__icon {
     display: flex;
     flex-direction: column;
